--- a/REST_API/package.json
+++ b/REST_API/package.json
@@ -16,6 +16,8 @@
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "google-auth-library": "^9.0.0",
+    "googleapis": "^126.0.0",
     "nodemon": "^3.0.1",
     "openai": "^3.3.0",
     "sib-api-v3-sdk": "^8.5.0"
